[#26] feat: 양수 방향 움직임 충돌 구현